[tool.poetry]
name = "lh-cd"
version = "0.1.0"
description = ""
authors = ["joao.miranda <jpfmirandaa@gmail.com>"]
readme = "README.md"
packages = [{include = "lh_cd"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
