[tool.poetry]
name = "lh-cd"
version = "0.1.0"
description = ""
authors = ["joao.miranda <jpfmirandaa@gmail.com>"]
readme = "README.md"
packages = [{include = "lh_cd"}]

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.15.0"
ipykernel = "^6.24.0"
sklearn = "^0.0.post5"
catboost = "^1.2"
xgboost = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
